infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnpm-food-delivery
  labels:
    name: cnpm-food-delivery
    environment: production
