infra/k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: cnpm-food-delivery
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: cnpm-final-project-auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: auth-uploads
              mountPath: /app/uploads
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: auth-uploads
          persistentVolumeClaim:
            claimName: auth-uploads-pvc
