infra/k8s/restaurant-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: cnpm-food-delivery
  labels:
    app: restaurant-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
        - name: restaurant-service
          image: cnpm-final-project-restaurant-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
          volumeMounts:
            - name: restaurant-uploads
              mountPath: /app/uploads
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: restaurant-uploads
          persistentVolumeClaim:
            claimName: restaurant-uploads-pvc
