infra/k8s/admin-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
  namespace: cnpm-food-delivery
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3001"
    prometheus.io/path: "/api/metrics"
spec:
  selector:
    app: admin-frontend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
