infra/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: cnpm-food-delivery
spec:
  selector:
    app: nginx-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: LoadBalancer
