infra/k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: cnpm-food-delivery
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5005"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
  type: ClusterIP
