infra/k8s/payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: cnpm-food-delivery
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5004"
    prometheus.io/path: "/api/metrics"
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
  type: ClusterIP
